--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BUMPER Burn — Live Dashboard</title>
   <meta name="description" content="Live burn dashboard for BUMPER on Solana: total burned, USD value, price, and recent burn transactions." />
-  <link rel="preload" as="image" href="bg-desktop.webp">
+  <link rel="preload" as="image" href="bg-desktop.png">
   <style>
     :root{
       /* Positioning tweaks for overlays relative to the background image */
